--- a/public/css/style1.css
+++ b/public/css/style1.css
@@ -22,7 +22,13 @@ h1 {
 
 body {
     font-family: 'Poppins', sans-serif;
+    min-height: 100vh; /* Ensure body is at least the height of the viewport */
+    margin: 0; /* Reset default body margin */
+    display: flex;
+    flex-direction: column;
 }
+
+
 
 .wrapper {
     display: flex;
